linux (5.7~rc5-1~exp2) UNRELEASED; urgency=medium

  * fs: Enable EXFAT_FS as module (Closes: #959781)

 -- Ben Hutchings <benh@debian.org>  Sat, 16 May 2020 00:08:32 +0100

linux (5.7~rc5-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Romain Perier ]
  * Enable support for fsverity

  [ Ben Hutchings ]
  * [rt] Disable until it is updated for 5.5 or later
  * lockdown: Update Secure Boot support patches for 5.7
  * [amd64] Update "x86: Make x32 syscall support conditional ..." for 5.7
  * Update "tools/perf: pmu-events: Fix reproducibility" for 5.7

 -- Ben Hutchings <benh@debian.org>  Sun, 10 May 2020 23:42:53 +0100

linux (5.6.7-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.5
    - perf tools: Support Python 3.8+ in Makefile (Closes: #958165)
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.6
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.6.7

  [ Ben Hutchings ]
  * [armhf,arm64] lockdown: Update arm Secure Boot patch for 5.6
    (fixes FTBFS)
  * Use debhelper compatibility level 12:
    - Build-Depend on debhelper-compat and remove debian/compat
    - hyperv-daemons: Use dh_installsystemd instead of
      dh_systemd_{enable,start}
    - hyperv-daemons: Add "Pre-Depends: ${misc:Pre-Depends}"
  * debian/README.source: Refer to upload checklist in kernel-team.git
  * [armel] Disable NETLABEL, since SECURITY_SELINUX is also disabled
  * Drop linux-headers-<ver>-all and linux-headers-<ver>-all-<arch> packages,
    which are no longer needed
  * linux-libc-dev: Drop "Provides: linux-kernel-headers" which is no longer
    needed
  * [s390x] mm: fix page table upgrade vs 2ndary address mode accesses
    (CVE-2020-11884)
  * Set ABI to 1

  [ Romain Perier ]
  *  Rebased patch firmware-remove-redundant-log-messages-from-drivers.patch
     onto 5.6.7.

  [ Philip Rinn ]
  * [arm64] Enable CRYPTO_DEV_SUN8I_CE (closes: #958037)