@@ -19,6 +19,7 @@
 /control
 /control.md5sum
 /files
+/bpftool/
 /hyperv-daemons/
 /kernel-image-*-di*
 /libcpupower*/
