@@ -1,6 +1,11 @@
 linux (5.7~rc5-1~exp2) UNRELEASED; urgency=medium
 
+  [ Ben Hutchings ]
   * fs: Enable EXFAT_FS as module (Closes: #959781)
+
+  [ Christian Barcenas ]
+  * bpftool: add packaging for tools/bpf/bpftool (Closes: #896165)
+    - Thank you to Noah Meyerhans for the first iteration of packaging.
 
  -- Ben Hutchings <benh@debian.org>  Sat, 16 May 2020 00:08:32 +0100
 
